@@ -1,6 +1,14 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.88 2004/10/05 13:22:06 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.89 2004/10/06 01:34:29 zhen Exp $
+
+  05 Oct 2004; John Davis <zhen@gentoo.org> modules/catalyst_support.py,
+  modules/generic_stage_target.py, +modules/netboot.py,
+  +targets/netboot/netboot-busybox.sh, +targets/netboot/netboot-image.sh,
+  +targets/netboot/netboot-kernel.sh, +targets/netboot/netboot-packages.sh,
+  +targets/netboot/netboot.sh:
+  initial import of the netboot code. thanks to Guy Martin <gmsoft@gentoo.org>
+  for writing them!
 
   05 Oct 2004; John Davis <zhen@gentoo.org> modules/generic_stage_target.py,
   targets/embedded/embedded-chroot.sh, targets/grp/grp-chroot.sh,
